--- a/DesignerRHN/DesignerRHN-war/web/ReportesBancos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/ReportesBancos.xhtml
@@ -29,49 +29,35 @@
                             <p:commandButton value="#{msg['cancelar']}" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
                         </p:dialog>
 
-                        
+
                         <fieldset style="position: absolute; left: 10px; top: 220px; width: 835px; height: 270px; border-radius: 10px; ">
                             <legend style="color: blue;text-align:left"><strong>#{msg['reportes']}</strong></legend>
 
                             <p:dataTable id="reportesBancos" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="border: 1px;width: 812px"                           
                                          value="#{controlReportesBancos.listaIR}" scrollable="true" scrollHeight="#{controlReportesBancos.altoTabla}" scrollWidth="830"
-                                         filteredValue="#{controlReportesBancos.filtrarListInforeportesUsuario}" emptyMessage="#{msg['vacio']}"
-                                         editable="true" editMode="cell" liveScroll="true" scrollRows="10">
-
+                                         filteredValue="#{controlReportesBancos.filtrarListInforeportesUsuario}"  selectionMode="single"  emptyMessage="#{msg['vacio']}"
+                                         editable="true" editMode="cell" selection="#{controlReportesBancos.actualInfoReporteTabla}">
                                 <p:column style="padding: 0px; text-align: center; width: 50px;" id="codigoIR" headerText="#{msg['codigo']}" width="50" sortBy="#{info.codigo}" filterBy="#{info.codigo}" filterMatchMode="contains"  filterStyle="display: none; visibility: hidden;"  >  
-                                    <p:cellEditor >  
-                                        <f:facet name="output"> 
-                                            <h:outputText value="#{info.codigo}"/>
-                                        </f:facet>  
-                                        <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigoIR" style="border-radius: 0px; width: 99%;" >
-                                                <p:ajax event="dblclick" listener="#{controlReportesBancos.parametrosDeReporte(indice)}" process="@this"/>
-                                                <p:ajax event="change" listener="#{controlReportesBancos.reporteModificado(indice)}" process="@this"/>
-                                                <p:ajax event="select" listener="#{controlReportesBancos.cambiarIndexInforeporte(indice)}" process="@this"/>
-                                            </p:inputText>
-                                        </f:facet>  
-                                    </p:cellEditor>
+                                    <p:outputLabel onclick="posicionReporte([{name: 't', value: '#{indice}'}]);"  value="#{info.codigo}" ondblclick="parametrosReporte([{name: 't', value: '#{indice}'}]);"/>
                                 </p:column>
 
                                 <p:column  id="reporteIR" headerText="#{msg['reporte']}" sortBy="#{info.nombre}" filterBy="#{info.nombre}" filterMatchMode="contains"  filterStyle="display: none; visibility: hidden;"  >  
-                                    <p:cellEditor >  
-                                        <f:facet name="output"><h:outputText style="width:260px" value="#{info.nombre}" /></f:facet>  
-                                        <f:facet name="input">
-                                            <p:inputText value="#{info.nombre}" id="editarReporteIR" style="width:260px; border-radius: 0px; width: 99%;" >
-                                                <p:ajax event="dblclick" listener="#{controlReportesBancos.parametrosDeReporte(indice)}" process="@this"/>
-                                                <p:ajax event="change" listener="#{controlReportesBancos.reporteModificado(indice)}" process="@this"/>
-                                                <p:ajax event="select" listener="#{controlReportesBancos.cambiarIndexInforeporte(indice)}" process="@this"/>
-                                            </p:inputText>
-                                        </f:facet>  
-                                    </p:cellEditor>
+                                    <p:outputLabel onclick="posicionReporte([{name: 't', value: '#{indice}'}]);"  value="#{info.nombre}" ondblclick="parametrosReporte([{name: 't', value: '#{indice}'}]);"/>
                                 </p:column>
 
                             </p:dataTable>
 
-                            <p:commandButton style="position: absolute; left: 10px; top: 231px; " id="GENERARREPORTE" value="#{msg['generar']}"   process="@this" actionListener="#{controlNReporteLaboral.generarReporte()}" ajax="false"/>
+                            <p:commandButton style="position: absolute; left: 10px; top: 231px; " id="GENERARREPORTE" value="#{msg['generar']}"   process="@this" actionListener="#{controlReportesBancos.generarReporte()}" ajax="false"/>
                             <p:tooltip style="font-size: 12px" for="GENERARREPORTE" value="Generar Reporte." />
 
                         </fieldset>
+
+
+                        <p:remoteCommand name="posicionReporte" actionListener="#{controlReportesBancos.posicionInfoReporte()}" process="@this"/>
+                        <p:remoteCommand name="parametrosReporte" actionListener="#{controlReportesBancos.posicionParaResaltoParametros()}" process="@this"/>
+
+
+
                         <p:toolbar style="font-size: 12px; position: absolute; top: 30px; left: 10px;">  
                             <p:toolbarGroup align="left"> 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlReportesBancos.guardarCambios()}" process="@this" />
