--- a/DesignerRHN/DesignerRHN-war/web/NReporteBienestar.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NReporteBienestar.xhtml
@@ -46,35 +46,15 @@
 
                             <p:dataTable id="reportesBienestar" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="border: 1px;"                           
                                          value="#{controlNReporteBienestar.listaIR}" scrollable="true" scrollHeight="#{controlNReporteBienestar.altoTabla}" scrollWidth="690"
-                                         filteredValue="#{controlNReporteBienestar.filtrarListInforeportesUsuario}" emptyMessage="#{msg['vacio']}"
-                                         editable="true" editMode="cell" liveScroll="true" scrollRows="10">
+                                         filteredValue="#{controlNReporteBienestar.filtrarListInforeportesUsuario}" selectionMode="single" emptyMessage="#{msg['vacio']}"
+                                         editable="true" editMode="cell" liveScroll="true" scrollRows="10" selection="#{controlNReporteBienestar.actualInfoReporteTabla}" >
 
                                 <p:column style="padding: 0px; text-align: center; width: 50px;" id="codigoIR" headerText="#{msg['codigo']}" width="50" sortBy="#{info.codigo}" filterBy="#{info.codigo}" filterMatchMode="contains"  filterStyle="display: none; visibility: hidden;"  >  
-                                    <p:cellEditor >  
-                                        <f:facet name="output"> 
-                                            <h:outputText value="#{info.codigo}"/>
-                                        </f:facet>  
-                                        <f:facet name="input">
-                                            <p:inputText value="#{info.codigo}" id="editarCodigoIR" style="border-radius: 0px; width: 99%;" >
-                                                <p:ajax event="dblclick" listener="#{controlNReporteBienestar.parametrosDeReporte(indice)}" process="@this"/>
-                                                <p:ajax event="change" listener="#{controlNReporteBienestar.reporteModificado(indice)}" process="@this"/>
-                                                <p:ajax event="select" listener="#{controlNReporteBienestar.cambiarIndexInforeporte(indice)}" process="@this"/>
-                                            </p:inputText>
-                                        </f:facet>  
-                                    </p:cellEditor>
+                                   <p:outputLabel onclick="posicionReporte([{name: 't', value: '#{indice}'}]);"  value="#{info.codigo}" ondblclick="parametrosReporte([{name: 't', value: '#{indice}'}]);"/>
                                 </p:column>
 
                                 <p:column  id="reporteIR" headerText="#{msg['reporte']}" sortBy="#{info.nombre}" filterBy="#{info.nombre}" filterMatchMode="contains"  filterStyle="display: none; visibility: hidden;"  >  
-                                    <p:cellEditor >  
-                                        <f:facet name="output"><h:outputText style="width:260px" value="#{info.nombre}" /></f:facet>  
-                                        <f:facet name="input">
-                                            <p:inputText value="#{info.nombre}" id="editarReporteIR" style="width:260px; border-radius: 0px; width: 99%;" >
-                                                <p:ajax event="dblclick" listener="#{controlNReporteBienestar.parametrosDeReporte(indice)}" process="@this"/>
-                                                <p:ajax event="change" listener="#{controlNReporteBienestar.reporteModificado(indice)}" process="@this"/>
-                                                <p:ajax event="select" listener="#{controlNReporteBienestar.cambiarIndexInforeporte(indice)}" process="@this"/>
-                                            </p:inputText>
-                                        </f:facet>  
-                                    </p:cellEditor>
+                                    <p:outputLabel onclick="posicionReporte([{name: 't', value: '#{indice}'}]);"  value="#{info.nombre}" ondblclick="parametrosReporte([{name: 't', value: '#{indice}'}]);"/>
                                 </p:column>
 
                                 <p:column id="tipoIR" headerText="#{msg['tipo']}" width="110" sortBy="#{info.tipo}" filterBy="#{info.tipo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;" style="padding: 0px; width: 110px" >                                  
@@ -98,6 +78,9 @@
                             <p:tooltip style="font-size: 12px" for="GENERARREPORTE" value="Generar Reporte." />
                         </fieldset>
                         
+                        <p:remoteCommand name="posicionReporte" actionListener="#{controlNReporteBienestar.posicionInfoReporte()}" process="@this"/>
+                        <p:remoteCommand name="parametrosReporte" actionListener="#{controlNReporteBienestar.posicionParaResaltoParametros()}" process="@this"/>
+
                         <p:toolbar style="font-size: 12px; position: absolute; top: 30px; left: 10px;">  
                             <p:toolbarGroup align="left"> 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlNReporteBienestar.guardarCambios()}" process="@this" />
