--- a/DesignerRHN/DesignerRHN-war/web/EmplSets.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplSets.xhtml
@@ -65,7 +65,7 @@
                         </p:toolbar> 
 
                         <fieldset style="position: absolute; left: 10px; top: 80px; font-size: 10px; width: 830px; height: 315px; border-radius: 10px; ">
-                            <legend style="font-size: 12px; color: blue"><strong>Infomacion SET</strong></legend>
+                            <legend style="font-size: 12px; color: blue"><strong>#{msg['informacion']}></strong></legend>
                             <!-- TABLA EMPLVIGENCIAREFORMALABORAL -->
 
                             <p:dataTable id="datosSetsEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" 
