--- a/DesignerRHN/DesignerRHN-war/web/escalafon.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/escalafon.xhtml
@@ -105,7 +105,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; border: none; color: blue" id="fooCategoria" value="#{msg['categoria']}"/>
+                                        <p:commandButton style="width: 100%; height: 16px; border: none; color: blue" id="fooCategoria" value="#{msg['categoria']}" action="categoriasEsca"/>
                                     </f:facet>
                                 </p:column> 
                                 
