--- a/DesignerRHN/DesignerRHN-war/web/EmplLegislacionLaboral.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplLegislacionLaboral.xhtml
@@ -14,7 +14,7 @@
                 <h:form id="form"> 
                     <p:panel  id="PanelTotal" header="Históricos Legislaciones Laborales" style=" font-size: 13px; position: absolute; width: 874px; height: 510px; text-align: left" >  
 
-                       <h:outputText style="position: absolute;top: 50px; height: 12px;position: absolute;color: red; font-weight: bold;text-align: right;width: 240px;left: 600px; "  id="nombreEmpleado" value="#{controlVigenciasContratos.empleado.persona.primerapellido} #{controlVigenciasContratos.empleado.persona.segundoapellido} #{controlVigenciasContratos.empleado.persona.nombre}"/>  
+                        <h:outputText style="position: absolute;top: 50px; height: 12px;position: absolute;color: red; font-weight: bold;text-align: right;width: 240px;left: 600px; "  id="nombreEmpleado" value="#{controlVigenciasContratos.empleado.persona.primerapellido} #{controlVigenciasContratos.empleado.persona.segundoapellido} #{controlVigenciasContratos.empleado.persona.nombre}"/>  
 
                         <fieldset style="position: absolute; left: 10px; top: 80px; font-size: 10px; width: 820px; height: 315px; border-radius: 10px; ">
                             <legend style="font-size: 12px; color: blue;text-align: left"><strong>Legislación Laboral</strong></legend>
@@ -99,7 +99,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTiposContratos" value="Tipo Contrato"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTiposContratos" action="tiposContratos" actionListener="#{controlTipoContrato.inicializarPagina()}" value="Tipo Contrato"/>
                                     </f:facet>
                                 </p:column>
                             </p:dataTable>  
@@ -274,8 +274,8 @@
                         <h:graphicImage value="Imagenes/error.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte." style="position: absolute; left: 70px; top: 28px; width: 185px; font-weight:bold;" />
                     </p:dialog>
-                    
-                     <p:dialog id="errorRegNew" header="ATENCIÓN" widgetVar="errorRegNew"  resizable="false" draggable="false" modal="true" height="80" width="275px" style="font-size: 12px" closable="true">  
+
+                    <p:dialog id="errorRegNew" header="ATENCIÓN" widgetVar="errorRegNew"  resizable="false" draggable="false" modal="true" height="80" width="275px" style="font-size: 12px" closable="true">  
                         <h:graphicImage value="Imagenes/error.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="Los campos Fecha Inicial-Legislacion Laboral son obligatorios." style="position: absolute; left: 70px; top: 15px; width: 185px; font-weight:bold;" />
                     </p:dialog>
@@ -284,7 +284,7 @@
                         <h:graphicImage value="Imagenes/error.png" width="50" height="50" style="position: absolute; left: 10px; top: 10px;"  />
                         <h:outputText value="La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial." style="position: absolute; left: 70px; top: 15px; width: 185px; font-weight:bold;" />
                     </p:dialog>
-                    
+
                     <p:hotkey bind="ctrl+f11" actionListener="#{controlVigenciasContratos.activarCtrlF11()}"/> 
                 </h:form>
                 <h:form id="formularioDialogos" >
