--- a/DesignerRHN/DesignerRHN-war/web/categoriaesca.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/categoriaesca.xhtml
@@ -250,7 +250,7 @@
 
                         <p:commandButton style="position: absolute; left: 685px; top: 435px; " id="ACEPTAR" icon="ui-icon-check" value="#{msg['aceptar']}" onclick="confirmarGuardar.show();" disabled="#{controlCategoriaEsca.cambiosPagina}" update=":form:datosCategoria" process="@this" />
                         <p:commandButton style="position: absolute; left: 20px; top: 435px; " id="REFRESCAR" value="#{msg['refrescar']}" icon="ui-icon-refresh" actionListener="#{controlCategoriaEsca.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 781px; top: 435px;" id="ATRAS" value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlCategoriaEsca.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 781px; top: 435px;" id="ATRAS" value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlCategoriaEsca.salir()}" action="escalaInfo" process="@this" />
 
                     </p:panel>
 
