--- a/DesignerRHN/DesignerRHN-war/web/tipocontrato.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/tipocontrato.xhtml
@@ -55,7 +55,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.nombre}" /></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.nombre}"  onclick="select();" id="editarNombreTipoContrato" style="border-radius: 0px; width: 99.5%;text-transform: uppercase"> 
+                                            <p:inputText value="#{info.nombre}" maxlength="30" onclick="select();" id="editarNombreTipoContrato" style="border-radius: 0px; width: 99.5%;text-transform: uppercase"> 
                                                 <p:ajax event="change" listener="#{controlTipoContrato.procesoModificacionTipoContrato(indice)}" update="editarNombreTipoContrato" process="@this"/>
                                                 <p:ajax event="select" listener="#{controlTipoContrato.cambiarIndice(indice, 1)}" process="@this"/>
                                             </p:inputText>
@@ -94,7 +94,7 @@
                                         <f:selectItem itemLabel="#{msg['si']}" itemValue="S" />  
                                         <f:selectItem itemLabel="#{msg['no']}" itemValue="N" />  
                                         <p:ajax event="change" listener="#{controlTipoContrato.modificarTipoContrato(indice)}" process="@this"/>
-                                        <p:ajax event="select" listener="#{controlTipoContrato.cambiarIndice(indiceD, 3)}"  process="@this"/>
+                                        <p:ajax event="select" listener="#{controlTipoContrato.cambiarIndice(indice, 3)}"  process="@this"/>
                                     </p:selectOneMenu>
                                     <f:facet name="footer">
                                         <h:outputText value="VE" />
@@ -250,8 +250,8 @@
                             <p:inputText onclick="select();" id="codigoTipoCClonar" value="#{controlTipoContrato.codigoTipoCClonar}" style="font-size: 12px;position: absolute; top : 50px; left: 10px;width: 75px;text-transform: uppercase">
                                 <p:ajax event="change" update="codigoTipoCClonar" process="@this"/>
                             </p:inputText>
-                            <h:outputText value="#{msg['nombreNClonarTC']}" style="font-size: 12px;position: absolute; top : 35px; left: 170px"/> 
-                            <p:inputText onclick="select();" id="nombreTipoCClonar" value="#{controlTipoContrato.nombreTipoCColnar}" style="font-size: 12px;position: absolute; top : 50px; left: 150px;width: 200px;text-transform: uppercase">
+                            <h:outputText value="#{msg['nombreNClonarTC']}"  style="font-size: 12px;position: absolute; top : 35px; left: 170px"/> 
+                            <p:inputText onclick="select();" id="nombreTipoCClonar" maxlength="30" value="#{controlTipoContrato.nombreTipoCColnar}" style="font-size: 12px;position: absolute; top : 50px; left: 150px;width: 200px;text-transform: uppercase">
                                 <p:ajax event="change" update="nombreTipoCClonar" process="@this"/>
                             </p:inputText>
 
@@ -462,7 +462,7 @@
                             <p:watermark value="#{msg['codigo']}" for="nuevoTipoContratoCodigo"/>
 
                             <strong><h:outputText value="#{msg['nombreNTC']}" style="font-size: 14px; position: absolute; top: 115px; left: 50px" /></strong>
-                            <p:inputText id="nuevoTipoContratoNombre" onclick="select();" value="#{controlTipoContrato.nuevoTipoContrato.nombre}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 110px;">
+                            <p:inputText id="nuevoTipoContratoNombre" maxlength="30" onclick="select();" value="#{controlTipoContrato.nuevoTipoContrato.nombre}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 110px;">
                                 <p:ajax event="change" update="nuevoTipoContratoNombre"/>
                             </p:inputText>
                             <p:watermark value="#{msg['nombre']}" for="nuevoTipoContratoNombre"/>
@@ -504,7 +504,7 @@
                             <p:watermark value="#{msg['codigo']}" for="duplicarTipoContratoCodigo"/>
 
                             <strong><h:outputText value="#{msg['nombreNTC']}" style="font-size: 14px; position: absolute; top: 115px; left: 50px" /></strong>
-                            <p:inputText id="duplicarTipoContratoNombre" onclick="select();" value="#{controlTipoContrato.duplicarTipoContrato.nombre}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 110px;">
+                            <p:inputText id="duplicarTipoContratoNombre" maxlength="30" onclick="select();" value="#{controlTipoContrato.duplicarTipoContrato.nombre}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 110px;">
                                 <p:ajax event="change" update="duplicarTipoContratoNombre"/>
                             </p:inputText>
                             <p:watermark value="#{msg['nombre']}" for="duplicarTipoContratoNombre"/>
@@ -544,6 +544,7 @@
                                 <p:ajax event="change" listener="#{controlTipoContrato.autocompletarNuevoyDuplicadoDiaLaborable('DIAS', controlTipoContrato.nuevoDiaLaborable.tipodia.descripcion, 1)}" />
                             </p:inputText>
                             <p:watermark value="#{msg['tipoDia']}" for="nuevoDiaLabTipoDia"/>
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 331px; top: 70px;  " id="btnNuevaDiaLabTipoDia" icon="ui-icon-search" process="@this"  actionListener="#{controlTipoContrato.asignarIndex(indiceD,0,1)}"/>   
 
                             <strong><h:outputText value="#{msg['diaNDL']}" style="font-size: 14px; position: absolute; top: 115px; left: 50px" /></strong>
                             <p:selectOneMenu id="nuevoDiaDiaLab" value="#{controlTipoContrato.nuevoDiaLaborable.dia}"  style="width: 100px; font-weight: bold;position: absolute; left: 200px; top: 110px;">  
@@ -583,6 +584,7 @@
                                 <p:ajax event="change" listener="#{controlTipoContrato.autocompletarNuevoyDuplicadoDiaLaborable('DIAS', controlTipoContrato.duplicarDiaLaborable.tipodia.descripcion, 2)}" />
                             </p:inputText>
                             <p:watermark value="#{msg['tipoDia']}" for="duplicarDiaLabTipoDia"/>
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 331px; top: 70px;  " id="btnDuplicaDiaLabTipoDia" icon="ui-icon-search" process="@this"  actionListener="#{controlTipoContrato.asignarIndex(indiceD,0,2)}"/>   
 
                             <strong><h:outputText value="#{msg['diaNDL']}" style="font-size: 14px; position: absolute; top: 115px; left: 50px" /></strong>
                             <p:selectOneMenu id="duplicarDiaDiaLab" value="#{controlTipoContrato.duplicarDiaLaborable.dia}"  style="width: 100px; font-weight: bold;position: absolute; left: 200px; top: 110px;">  
